[project]
name = "crosschain_bot"
version = "0.1.0"
description = "Бот для кросс-чейн арбитража с использованием флэш-займов"
authors = [
    {name = "asdychkov",email = "stepanderdichok@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4"
setuptools = "*"
package-mode = false
dependencies = [
    "web3 (>=6.0.0,<7.0.0)",
    "aiolimiter (>=1.2.1,<2.0.0)",
    "aiohttp (>3.8.1)",
    "loguru (>=0.7.3,<0.8.0)",
    "aioprometheus (>=23.12.0,<24.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
