[tool.poetry]
name = "crosschain_bot"
version = "0.1.0"
description = "Бот для кросс-чейн арбитража с использованием флэш-займов"
authors = ["asdychkov <stepanderdichok@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.13,<4"
web3 = ">=6.0.0,<7.0.0"
aiolimiter = ">=1.2.1,<2.0.0"
aiohttp = ">3.8.1"
loguru = ">=0.7.3,<0.8.0"
aioprometheus = ">=23.12.0,<24.0.0"

[tool.poetry.group.dev.dependencies]
isort = "^6.0.1"
mypy = "^1.15.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
